--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
   /* max-width: 1280px; */
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
+  width: 1400px;
 }
 
 .logo {
